--- a/the-directory_react_frontend/src/App.css
+++ b/the-directory_react_frontend/src/App.css
@@ -1,18 +1,42 @@
+body{
+  background-color: black;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-nav {
+  background-color: black;
+  text-align: center;
+  /*flex-direction: column;*/
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  float: left;
+  color: white;
+  margin-top: 40px;
+
 }
 
+.navbar-Container{
+  width: 100%;
+}
+
+.App-logo {
+  height: 8rem;
+  width: 8rem;
+  object-fit: contain;
+  float: left;
+}
+
+/*
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+}*/
 
+/*
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,12 +46,13 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+}*/
 
 .App-link {
   color: #61dafb;
 }
 
+/*
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +60,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
