Early adjustments to navigation bar

--- a/the-directory_react_frontend/src/assets/styles/Nav.css
+++ b/the-directory_react_frontend/src/assets/styles/Nav.css
@@ -6,9 +6,12 @@
     
 }
 
-.nav_bar a{
+.link_item{
     margin: 80px 40px;
     text-align: center;
-    
+    color: white;
 }
 
+.link_item:hover {
+    background-color: darkgrey;
+}
