New mobile styling

--- a/the-directory_react_frontend/src/assets/styles/Nav.css
+++ b/the-directory_react_frontend/src/assets/styles/Nav.css
@@ -1,9 +1,8 @@
 .nav_bar{
     color: white;
     display: block;
-   
-    
-    
+    text-align: center;
+    font-size: x-large; 
 }
 
 .link_item{
