--- a/the-directory_react_frontend/src/App.css
+++ b/the-directory_react_frontend/src/App.css
@@ -29,6 +29,20 @@ body{
   float: left;
 }
 
+.App-logo-alt {
+  height: 100%;
+  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: contain;
+}
+
+.Title-label {
+  text-align: center;
+  font-size: xx-large;
+}
+
 /*
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
