--- a/the-directory_react_frontend/src/assets/styles/Scanner.css
+++ b/the-directory_react_frontend/src/assets/styles/Scanner.css
@@ -1,5 +1,9 @@
 .scanner{
-    width:300px;
-    height: 300px;
+    width:75%;
+    height: 75%;
     margin: 0 auto;
+}
+
+.pageTitle {
+    text-align: center;
 }
