--- a/the-directory_react_frontend/src/assets/styles/Nav.css
+++ b/the-directory_react_frontend/src/assets/styles/Nav.css
@@ -5,6 +5,13 @@
     font-size: x-large; 
 }
 
+.nav_bar_mobile{
+    position: fixed;
+    width: 100%;  
+    bottom: 0;
+    background-color: black;
+}
+
 .link_item{
     margin: 80px 40px;
     text-align: center;
