Adjusted scaling for scanitem

--- a/the-directory_react_frontend/src/assets/styles/ScanItem.css
+++ b/the-directory_react_frontend/src/assets/styles/ScanItem.css
@@ -1,6 +1,6 @@
 .MobileScanItem{ 
-    width: 100%;
-    height: 15%;
+    /* width: 100%;
+    height: 15%; */
     margin-top: '5px';
     margin-bottom: '5px';
 }
