--- a/the-directory_react_frontend/src/assets/styles/Styles.css
+++ b/the-directory_react_frontend/src/assets/styles/Styles.css
@@ -1,3 +1,19 @@
 div {
     color: antiquewhite;
 }
+
+#arrowRight {
+    cursor: pointer;
+    margin-top: -10px;
+    margin-left: 165px !important; 
+    margin-right: 20px !important; 
+    font-size: large !important;
+ }
+
+ #arrowLeft {
+    cursor: pointer;
+    margin-top: -10px;
+    margin-right: 165px !important;
+    margin-left: 20px !important;  
+    font-size: large !important;
+ }
