--- a/the-directory_react_frontend/src/assets/styles/ScanItem.css
+++ b/the-directory_react_frontend/src/assets/styles/ScanItem.css
@@ -1,3 +1,10 @@
+.itemImage {
+    width: 100%;
+    height: auto;
+    max-height: 350px;
+    margin-bottom: 5px;
+}
+
 .MobileScanItem{ 
     /* width: 100%;
     height: 15%; */
