--- a/the-directory_react_frontend/src/assets/styles/ScanItem.css
+++ b/the-directory_react_frontend/src/assets/styles/ScanItem.css
@@ -1,7 +1,7 @@
 .itemImage {
-    width: 100%;
-    height: auto;
+    max-width: 80%;
     max-height: 300px;
+    /* max-height: 300px; */
     margin-bottom: 5px;
 }
 
@@ -18,6 +18,9 @@
 
 .MobileScanItemDescription {
     font-size: '3vw';
+    overflow: auto;
+    height: 150px;
+    margin-bottom: 15px;
 }
 
 .DesktopScanItem {
