--- a/the-directory_react_frontend/src/assets/styles/ScanItem.css
+++ b/the-directory_react_frontend/src/assets/styles/ScanItem.css
@@ -1,6 +1,8 @@
 .itemImage {
-    max-width: 80%;
-    max-height: 300px;
+    max-width: 75%;
+    max-height: 75%;
+    min-width: 35%;
+    min-height: 35%;
     /* max-height: 300px; */
     margin-bottom: 5px;
 }
@@ -14,12 +16,15 @@
 
 .MobileItemName {
     font-size: '6vw';
+    height: 30%;
 }
 
 .MobileScanItemDescription {
+    margin-left: 5px;
+    margin-right: 5px;
     font-size: '3vw';
     overflow: auto;
-    height: 150px;
+    height: 60pt;
     margin-bottom: 15px;
 }
 
