--- a/the-directory_react_frontend/src/assets/styles/Card.css
+++ b/the-directory_react_frontend/src/assets/styles/Card.css
@@ -4,6 +4,9 @@
   perspective: 800px;
   cursor: pointer;
   transition: transform 0.6s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card .card-inner {
@@ -18,7 +21,17 @@
   transform: rotateY(180deg);
 }
 
-.card .card-front,
+.card .card-front{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
 .card .card-back {
   width: 100%;
   height: 100%;
@@ -41,4 +54,23 @@
   justify-content: center;
   align-items: center;
   color: #fff;
+}
+
+.image-resize {
+  width: 300px; /* Set the desired width */
+  height: 200px; /* Set the desired height */
+}
+
+.card-front h2 {
+  /* Existing styles */
+
+  /* Add the following styles */
+  margin-top: 20px; /* Adjust the margin as needed */
+}
+
+.card-front img {
+  /* Existing styles */
+
+  /* Add the following styles */
+  margin-top: auto;
 }
