--- a/the-directory_react_frontend/src/assets/styles/mainCard.css
+++ b/the-directory_react_frontend/src/assets/styles/mainCard.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital@1&display=swap");
+
 .card-grid {
   display: grid;
   align-items: center;
@@ -19,7 +22,7 @@
   margin-top: 2vh;
 }
 
-.card.flipped {
+.card.flip {
   --rotate-y: 180deg;
 }
 
