--- a/the-directory_react_frontend/src/assets/styles/Styles.css
+++ b/the-directory_react_frontend/src/assets/styles/Styles.css
@@ -18,7 +18,7 @@ div {
     font-size: large !important;
  }
  
- .container
+ .cardContainer
  {
      display: flex;
      flex-direction: column;
