--- a/the-directory_react_frontend/src/assets/styles/mainCard.css
+++ b/the-directory_react_frontend/src/assets/styles/mainCard.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital@1&display=swap");
+
 .card-grid {
   display: grid;
   align-items: center;
@@ -19,7 +22,7 @@
   margin-top: 2vh;
 }
 
-.card.flipped {
+.card.flip {
   --rotate-y: 180deg;
 }
 
@@ -50,6 +53,7 @@
   border-radius: var(--mobile-card-border-radius);
   box-shadow: 4px 4px 4px rgb(53, 53, 53);
   color: white;
+  background-color: rgb(55, 58, 58);
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
