--- a/the-directory_react_frontend/src/assets/styles/Card.css
+++ b/the-directory_react_frontend/src/assets/styles/Card.css
@@ -62,6 +62,26 @@
   height: 200px; /* Set the desired height */
 }
 
+.cardHeaderBorder{
+  border: 3px solid white;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: center;
+  font-size: 6vw;
+}
+
+.cardContentBorder{
+  border: 3px solid white;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  font-size: 4vw;
+  text-align: center;
+}
 .card-front h2 {
   /* Existing styles */
 
