Added more rounding

--- a/the-directory_react_frontend/src/assets/styles/Card.css
+++ b/the-directory_react_frontend/src/assets/styles/Card.css
@@ -64,7 +64,8 @@
 
 .cardHeaderBorder{
   border: 3px solid white;
-  border-radius: 5px;
+  background-color: rgb(88, 88, 88);
+  border-radius: 25px;
   margin-top: 5px;
   margin-left: 5px;
   margin-right: 5px;
@@ -74,7 +75,8 @@
 
 .cardContentBorder{
   border: 3px solid white;
-  border-radius: 5px;
+  background-color: rgb(88, 88, 88);
+  border-radius: 25px;
   margin-top: 5px;
   margin-left: 5px;
   margin-right: 5px;
