--- a/the-directory_react_frontend/src/assets/styles/mainCard.css
+++ b/the-directory_react_frontend/src/assets/styles/mainCard.css
@@ -2,8 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital@1&display=swap");
 
 .card-grid {
-  display: grid;
-  align-items: center;
+  display: flex;
+  justify-content: center;
+  overflow-x: scroll; /* Add horizontal scroll */
+  padding: 10px; /* Add padding for spacing */
 }
 
 .card {
@@ -16,10 +18,10 @@
   transition: 700ms;
   transform: perspective(1000px) rotateY(var(--rotate-y, 0))
     translateY(var(--translate-y, 0));
-  /* min-height: 540px;
-  margin: 20px; */
   height: 70vh;
   margin-top: 2vh;
+  width: calc(100% - 20px); /* Adjust the width to fit the available space with padding */
+  margin: 0 5px; /* Add margin on either side */
 }
 
 .card.flip {
@@ -30,14 +32,12 @@
 .card .back {
   position: absolute;
   backface-visibility: hidden;
-  width: 93%;
+  width: 100%; /* Make the front and back occupy the full width */
   height: 100%;
 }
 
 .card .front {
   color: white;
-  /* border: 2px solid white;
-  border-radius: 12px; */
   border: var(--mobile-card-border-style);
   border-radius: var(--mobile-card-border-radius);
   background-color: rgb(55, 58, 58);
@@ -46,9 +46,6 @@
 
 .card .back {
   transform: rotateY(180deg);
-}
-
-.card .back {
   border: var(--mobile-card-border-style);
   border-radius: var(--mobile-card-border-radius);
   box-shadow: 4px 4px 4px rgb(53, 53, 53);
@@ -57,7 +54,6 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  /*   */
   overflow: auto;
 }
 
@@ -76,6 +72,7 @@
   position: fixed;
   bottom: 4%;
   right: 10%;
+  font-size: 1.8em; /* Adjust the font size as needed */
 }
 
 .footerInfo {
@@ -88,19 +85,19 @@
 }
 
 .cardImage {
-  /* border: solid 1px black; */
-  /* margin: 10px; */
   margin-top: 0px;
   margin-bottom: 0px;
   text-align: center;
   object-fit: cover;
 }
+
 .image {
   text-align: center;
   width: 100%;
   height: 70vh;
   border-radius: 3px;
 }
+
 .image2 {
   text-align: center;
   width: 360px;
@@ -109,26 +106,24 @@
 }
 
 /* Back side of the card */
-.cardBackHeaderImage{
+.cardBackHeaderImage {
   margin: 12px;
   text-align: center;
   overflow: hidden;
-  /* border-bottom: solid 2px white; */
   border: solid 2px white;
   border-radius: 3px;
 }
 
-.backHeaderImage{
+.backHeaderImage {
   text-align: center;
   width: 100%;
   height: 60px;
   object-fit: cover;
   filter: blur(5px);
   -webkit-filter: blur(5px);
-  
 }
 
-.backHeader{
+.backHeader {
   position: absolute;
   margin: auto;
   top: 5%;
@@ -136,31 +131,24 @@
   right: 0;
   text-align: center;
   z-index: 1;
-
   font-size: 38px;
   font-family: "CrocodileFont";
   letter-spacing: 2px;
-  
 }
 
-.backInfo{
+.backInfo {
   margin: 12px;
   font-size: 18px;
   font-family: 'Franklin Gothic Narrow';
   letter-spacing: 1px;
 }
 
-
-
-
-
-.slide{
+.slide {
   padding: 15;
   height: 100%;
 }
 
-.slide1{
-  /* background-color: rgb(50, 63, 63); */
+.slide1 {
   background-image: linear-gradient(to bottom right, rgb(26, 24, 24), rgb(53, 53, 45));
   border: solid 2px white;
   border-radius: 3px;
@@ -168,7 +156,7 @@
   margin-right: 2px;
 }
 
-.slide2{
+.slide2 {
   background-image: linear-gradient(to bottom right, rgb(26, 24, 24), rgb(53, 53, 45));
   border: solid 2px white;
   border-radius: 3px;
@@ -176,7 +164,7 @@
   margin-right: 2px;
 }
 
-.slide3{
+.slide3 {
   background-image: linear-gradient(to bottom right, rgb(26, 24, 24), rgb(53, 53, 45));
   border: solid 2px white;
   border-radius: 3px;
@@ -184,7 +172,7 @@
   margin-right: 2px;
 }
 
-.sliderImage{
+.sliderImage {
   text-align: center;
   width: 100%;
   height: 285px;
@@ -192,14 +180,13 @@
   border-radius: 3px;
 }
 
-.backTextWrapper{
+.backTextWrapper {
   padding: 8px;
 }
 
-.infoHeader{
+.infoHeader {
   font-family: CrocodileFont;
   font-size: 26px;
   border-bottom: 2px solid white;
   margin-bottom: 12px;
-  
 }
