--- a/the-directory_react_frontend/src/assets/styles/Card.css
+++ b/the-directory_react_frontend/src/assets/styles/Card.css
@@ -58,8 +58,14 @@
 }
 
 .image-resize {
-  width: 300px; /* Set the desired width */
-  height: 200px; /* Set the desired height */
+  width: 80%;
+  height: 70%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 20px solid #565656;
+  border-radius: 8px;
+
 }
 
 .cardHeaderBorder{
