Added greater margins to card top and added styling to webcam

--- a/the-directory_react_frontend/src/assets/styles/mainCard.css
+++ b/the-directory_react_frontend/src/assets/styles/mainCard.css
@@ -6,6 +6,7 @@
   justify-content: center;
   overflow-x: scroll; /* Add horizontal scroll */
   padding: 10px; /* Add padding for spacing */
+  margin-top: 2vh;
 }
 
 .card {
