Added Desktop View

--- a/the-directory_react_frontend/src/App.css
+++ b/the-directory_react_frontend/src/App.css
@@ -83,6 +83,11 @@ body{
   font-size: 10vw;
 }
 
+.Desktop-Title-Label{
+  text-align: center;
+  font-size: 6vw;
+}
+
 .PageTitleMobile {
   position: sticky;
   top: 0px;
