--- a/the-directory_react_frontend/src/assets/styles/Card.css
+++ b/the-directory_react_frontend/src/assets/styles/Card.css
@@ -79,6 +79,17 @@
   font-size: 6vw;
 }
 
+.cardHeaderBorderDesktop{
+  border: 3px solid white;
+  background-color: rgb(88, 88, 88);
+  border-radius: 25px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: center;
+  font-size: 3vw;
+}
+
 .cardContentBorder{
   border: 3px solid white;
   background-color: rgb(88, 88, 88);
@@ -88,6 +99,18 @@
   margin-right: 5px;
   margin-bottom: 5px;
   font-size: 4vw;
+  text-align: center;
+}
+
+.cardContentBorderDesktop{
+  border: 3px solid white;
+  background-color: rgb(88, 88, 88);
+  border-radius: 25px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  font-size: 2.5vw;
   text-align: center;
 }
 .card-front h2 {
